assets/css/main.css
:root{
    font-size: 16px;
    min-height: 100%;
    background: var(--bg-primary);
}

*{
    outline: none;
}

button::-moz-focus-inner{
    border: 0;
}

input, textarea, button, select, a{
    -webkit-tap-highlight-color: #0000;
}

body, html{
    margin: 0;
    padding: 0;
}

body{
    color: var(--text-color);
    font-family: 'Exo 2', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
    padding: 1.5rem;
}

.monotype{
    font-family: 'Ubuntu Mono', 'Noto Mono', 'Roboto Mono', mono, monospace;
}

button.md-btn{
    font-size: .875rem;
    padding: 0 1.1rem;
    border: .07rem solid rgba(0,0,0,.12);
    background: transparent;
    margin: .57rem;
    margin-left: 0;
    line-height: 2.57rem;
    border-radius: var(--border-radius);
    white-space: nowrap;
    cursor: pointer;
}

.block{
    background: var(--bg-secondary);
    padding: 1.5rem;
    border-radius: var(--border-radius);
    margin-bottom: 1.5rem;
    box-shadow: var(--block-shadow);
}

div.tblock > * {
    --margin: 1rem;
    display: inline-block;
    width: calc(100% / var(--inline-count) - (var(--margin) * (var(--inline-count) - 1) / var(--inline-count)));
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: top;
    margin: var(--margin);
    margin-right: 0;
}

div.tblock > *:first-child{
    margin-left: 0;
}

.image{
    border-radius: 1.5rem;
    position: relative;
    overflow: hidden;
}

.image > div{
    background-size: cover;
    background-position: center;
}

.image.round{
    border-radius: 50%;
}

.image > div:first-child{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.image > div:last-child{
    background: #666;
    padding-bottom: calc(100% / var(--ratio-w) * var(--ratio-h));
}

.image[invert]{
    filter: invert(calc(100% - var(--invert-amount)));
}

.buttons{
    display: flex;
    flex-wrap: wrap;
    margin-top: 1rem;
}

.buttons > *{
    flex-grow: 1;
    /* iOS doesn't support gap in flex, so... */
    margin: .5rem;
}

.dialog-bg{
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
    appearance: none;
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    background-color: #000;
    pointer-events: none;
    opacity: 0;
    transition: all var(--transition-speed) cubic-bezier(0.5, -0.5, 0.25, 1.5);
}

dialog[open] + .dialog-bg{
    pointer-events: auto;
    opacity: 0.25;
}

dialog:not([open]){
    display: block;
    top: -100%;
}

dialog{
    z-index: 2;
    border-radius: var(--border-radius);
    background: var(--bg-secondary);
    padding: 1.5rem;
    box-shadow: var(--block-shadow);
    border: none;
    top: 50%;
    width: 90%;
    transform: translate(0, -50%);
    transition: all var(--transition-speed) cubic-bezier(0.6, -0.5, 0.25, 1.5);
    position: fixed;
    max-height: 60%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    max-width: 37.5rem;
    max-width: -moz-fit-content;
    max-width: fit-content;
    margin: 0 auto;
}

@media (max-width: 500px){
    dialog{
        margin: 0 25px;
    }
}

dialog > div:first-child{
    overflow: hidden auto;
    text-overflow: ellipsis;
}

dialog .buttons{
    display: flex !important;
    max-width: 420px;
    float: right;
    margin-bottom: 0;
}

dialog .buttons > span > button{
    width: 100%
}

.error-container{
    --container-padding: 40px;
    position: fixed;
    bottom: 20px;
    width: calc(100% - (var(--container-padding) * 2));
    left: 0;
    padding: var(--container-padding);
    z-index: 3;
}

.error-container > pre{
    --padding: 20px;
    color: var(--bg-primary);
    background-color: var(--text-color);
    opacity: 0.7;
    border-radius: 5px;
    padding: var(--padding);
    width: calc(100% - (var(--padding) * 2));
    white-space: pre-wrap;
}

/* material ripple effect */

.md-ripple{
    position: relative;
    overflow: hidden;
}

.md-ripple .ripple-wrap{
    --width: 100%;
    position: absolute;
    pointer-events: none;
    transform: translate(-50%, -50%);
    padding-bottom: var(--width);
    width: var(--width);
}

.md-ripple .ripple{
    --transition: .4s;
    --width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: var(--theme-color);
    border-radius: 50%;
    width: 100%;
    height: 100%;
    pointer-events: none;
    opacity: 0;
    transform: scale(0);
}

.md-ripple .ripple.start{
    transform: scale(0.2);
}

.md-ripple .ripple.active{
    background: transparent;
    transition: var(--transition);
    opacity: 1;
    transform: scale(2);
}

.md-ripple .md-spinner{
    position: absolute;
    color: var(--theme-dark-color);
    width: .75rem;
    top: .25rem;
    right: .25rem;
}

.md-ripple:not(.loading) .md-spinner{
    display: none;
}

/* material design spinner */

@keyframes md-spinner-rotator {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(270deg);
    }
}

@keyframes md-spinner-dash {
    0% {
        stroke-dashoffset: 187;
    }
    50% {
        stroke-dashoffset: 46.75;
        transform: rotate(135deg);
    }
    100% {
        stroke-dashoffset: 187;
        transform: rotate(450deg);
    }
}

svg.md-spinner{
    width: 60px;
    animation: md-spinner-rotator 1.4s linear infinite;
}

svg.md-spinner > circle{
    stroke-dasharray: 187;
    stroke-dashoffset: 0;
    transform-origin: center;
    animation: md-spinner-dash 1.4s ease-in-out infinite;
    stroke: currentColor;
}

/* material design audio block */

.md-audio{
    box-shadow: var(--block-shadow);
    padding: .75rem;
    display: flex;
    background: var(--bg-secondary);
    margin: .5rem 0;
    border-radius: var(--border-radius);
}

.md-audio > .plyr,
.md-audio .plyr__controls{
    width: 100%;
}

.md-audio .plyr__time{
    font-family: 'Ubuntu Mono';
    font-size: 1.1rem;
    cursor: pointer;
}

.md-audio, .md-video{
    --plyr-color-main: var(--theme-color);
    --plyr-menu-background: var(--bg-secondary);
    --plyr-menu-shadow: var(--block-shadow);
    --plyr-menu-radius: var(--border-radius);
}

/* mobile styles */

@media (max-width: 520px) {
    div.tblock > * {
        display: block;
        width: 100%;
        margin-left: 0;
    }
}

